--- a/Views/Shared/layouts/_Header.cshtml
+++ b/Views/Shared/layouts/_Header.cshtml
@@ -19,6 +19,9 @@
                         <a class="nav-link text-white" asp-area="" asp-controller="Home"
                             asp-action="Privacy">Privacy</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" asp-area="" asp-controller="Salam" asp-action="About">About</a>
+                    </li>
                 </ul>
             </div>
         </div>
