Add: View Index Home

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,22 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<div class="row">
+    @* ini typography *@
+    <div class="col-md-6 pt-5 pt-lg-0">
+        <h1>
+            Continous Learning and Keep Up to Date with
+            <strong class="text-primary">Inixindo</strong>
+        </h1>
+        <div class="my-3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam accusamus porro illum perferendis
+            blanditiis quasi aspernatur temporibus cum quod? Enim, ratione voluptatem? Possimus recusandae veniam sint
+            rerum ullam officiis beatae.
+        </div>
+        <div class="mt-4">
+            <a href="#" class="btn btn-outline-primary">Get Started</a>
+        </div>
+    </div>
 
-<div class="text-center">
-    <h1>Training ASP.NET Core 10</h1>
+    @* gambar/hero section *@
+    <div class="col-md-6">
+        image
+    </div>
 </div>
