Add: View Index CSS Image

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿<div class="row">
     @* ini typography *@
-    <div class="col-md-6 pt-5 pt-lg-0 d-flex justify-content-center flex-column order-0 order-2 order-lg-1">
+    <div data-aos="fade-right" data-aos-duration="2000"
+        class="col-md-6 pt-5 pt-lg-0 d-flex justify-content-center flex-column order-0 order-2 order-lg-1">
         <h1>
             Continous Learning and Keep Up to Date with
             <strong class="text-primary">Inixindo</strong>
@@ -16,7 +17,7 @@
     </div>
 
     @* gambar/hero section *@
-    <div class="col-md-6 order-2 order-lg-2">
+    <div data-aos="zoom-in" data-aos-duration="2000" class="col-md-6 order-1 order-lg-2">
         <img class="img-fluid animasi" src="~/images/banner.svg" alt="Banner Inixindo">
     </div>
 </div>
