--- a/Views/Shared/layouts/_Header.cshtml
+++ b/Views/Shared/layouts/_Header.cshtml
@@ -16,8 +16,8 @@
                         <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" asp-area="" asp-controller="Home"
-                            asp-action="Privacy">Privacy</a>
+                        <a class="nav-link text-white" asp-area="" asp-controller="Employee"
+                            asp-action="Index">Employee</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" asp-area="" asp-controller="Salam" asp-action="About">About</a>
