--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -1,3 +1,8 @@
+@* @model List<MvcApp.Models.Employee> *@
+<h4>Employee List</h4>
+<a asp-controller="Employee" asp-action="Create" class="btn btn-primary">
+    Create
+</a>
 <table class="table">
     <thead>
         <tr>
@@ -9,14 +14,23 @@
         </tr>
     </thead>
     <tbody>
+        @{
+            int i = 1;
+        }
         @foreach (var employee in Model)
         {
             <tr>
-                <th scope="row">1</th>
+                <th scope="row">@i</th>
+                @{
+                    i++;
+                }
                 <td>@employee.Name</td>
                 <td>@employee.Division</td>
                 <td>@employee.Role</td>
-                <td>btn aksi</td>
+                <td>
+                    <a href="" class="btn btn-warning">Edit</a>
+                    <a href="" class="btn btn-outline-danger">Delete</a>
+                </td>
             </tr>
         }
     </tbody>
