--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -28,8 +28,10 @@
                 <td>@employee.Division</td>
                 <td>@employee.Role</td>
                 <td>
-                    <a href="" class="btn btn-warning">Edit</a>
-                    <a href="" class="btn btn-outline-danger">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-warning">
+                        Edit
+                    </a>
+                    <a asp-action="Delete" asp-route-id="@employee.Id" class="btn btn-outline-danger">Delete</a>
                 </td>
             </tr>
         }
