--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -31,7 +31,14 @@
                     <a asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-warning">
                         Edit
                     </a>
-                    <a asp-action="Delete" asp-route-id="@employee.Id" class="btn btn-outline-danger">Delete</a>
+                    @* <a asp-action="Delete" asp-route-id="@employee.Id" class="btn btn-outline-danger">Delete</a> *@
+                    <form asp-action="Delete" method="post" style="display:inline;">
+                        <input type="hidden" name="id" value="@employee.Id" />
+                        <button type="submit" class="btn btn-outline-danger" onclick="return 
+                                    confirm('Are you sure you want to delete this employee?');">
+                            Delete
+                        </button>
+                    </form>
                 </td>
             </tr>
         }
